Update for JAR creation (compatibility)